<resources>
    <string name="app_name">Vought</string>
    <string name="email">Email</string>
    <string name="cpf">CPF</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="or">ou</string>
    <string name="already_has_account">Já tem uma conta? <b><font color="#ffffff">Faça login.</font></b></string>
    <string name="welcome_account"><b>VOUGHT</b>\n Porque a vida é um evento.</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Ajustes</string>
    <string name="next">Avançar</string>
    <string name="name">Nome</string>
    <string name="cep">CEP</string>
    <string name="password_confirm">Confirmar senha</string>
    <string name="continuee">Continuar</string>
    <string name="agree_terms_policy">Ao clicar em Avançar, você concorda com nossos <b>Termos, Política de Dados e Política de Cookies.</b></string>
    <string name="welcome_to_vought"><b>BEM-VINDO AO VOUGHT,\n%1$s</b>\nEncontre pessoas para seguir e comece a compartilhar fotos. Você pode alterar seu nome de usuário a qualquer momento.</string>
    <string name="photo_register_subtitle">Adicione uma foto do perfil para que seus amigos saibam que é você.</string>
    <string name="photo_register_title">Adicionar foto do perfil</string>
    <string name="take_picture">Tirar foto</string>
    <string name="search_gallery">Escolher na Biblioteca</string>
    <string name="define_photo_profile">Definir uma foto do perfil</string>
    <string name="jump">Pular</string>
    <string name="add_photo">Adicionar uma foto</string>
    <string name="home">Home</string>
    <string name="location_app">Buscar Eventos</string>
    <string name="add_event">Novo Evento</string>
    <string name="profile">Perfil</string>
    <string name="carrossel_event">Últimos eventos</string>
    <string name="posts">publicações</string>
    <string name="followers">seguidores</string>
    <string name="following">seguindo</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="username">username</string>
    <string name="invalid_email">Email ou senha inválido</string>
    <string name="password_not_equal">Senha e confirmar senha devem ser iguais.</string>
    <string name="save">Salvar</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="photo">Foto</string>
    <string name="gallery">Galeria</string>
    <string name="write_caption">Escreva uma descrição…</string>
    <string name="share">compartilhar</string>
    <string name="go">Avançar</string>
    <string name="search">Pesquisar</string>
    <string name="unfollow">Seguindo</string>
    <string name="follow">Seguir</string>
    <string name="logout">Deseja sair?</string>
    <string name="logout_action">Sair</string>
    <string name="cancel">Cancelar</string>
    <string name="does_not_have_account">Não tem uma conta? <b><font color="#ffffff">Cadastre-se.</font></b></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txt_add_event">Crie e personalize seu evento do jeito que preferir</string>
    <string name="txt_edit_event">Aqui você pode conferir todos os eventos que você já criou e alterá-los</string>
    <string name="termo_de_uso">
        Política de privacidade. A sua privacidade é importante para nós. É política do Vought respeitar a sua privacidade em relação a qualquer informação sua que possamos coletar no site Vought, e outros sites que possuímos e operamos.Solicitamos informações pessoais apenas quando realmente precisamos delas para lhe fornecer um serviço. Fazemo-lo por meios justos e legais, com o seu conhecimento e consentimento. Também informamos por que estamos coletando e como será usado.Apenas retemos as informações coletadas pelo tempo necessário para fornecer o serviço solicitado. Quando armazenamos dados, protegemos dentro de meios comercialmente aceitáveis ​​para evitar perdas e roubos, bem como acesso, divulgação, cópia, uso ou modificação não autorizados.Não compartilhamos informações de identificação pessoal publicamente ou com terceiros, exceto quando exigido por lei.O nosso site pode ter links para sites externos que não são operados por nós. Esteja ciente de que não temos controle sobre o conteúdo e práticas desses sites e não podemos aceitar responsabilidade por suas respectivas políticas de privacidade.Você é livre para recusar a nossa solicitação de informações pessoais, entendendo que talvez não possamos fornecer alguns dos serviços desejados.O uso continuado de nosso site será considerado como aceitação de nossas práticas em torno de privacidade e informações pessoais. Se você tiver alguma dúvida sobre como lidamos com dados do usuário e informações pessoais, entre em contacto connosco.O serviço Google AdSense que usamos para veicular publicidade usa um cookie DoubleClick para veicular anúncios mais relevantes em toda a Web e limitar o número de vezes que um determinado anúncio é exibido para você.Para mais informações sobre o Google AdSense, consulte as FAQs oficiais sobre privacidade do Google AdSense.Utilizamos anúncios para compensar os custos de funcionamento deste site e fornecer financiamento para futuros desenvolvimentos. Os cookies de publicidade comportamental usados ​​por este site foram projetados para garantir que você forneça os anúncios mais relevantes sempre que possível, rastreando anonimamente seus interesses e apresentando coisas semelhantes que possam ser do seu interesse.Vários parceiros anunciam em nosso nome e os cookies de rastreamento de afiliados simplesmente nos permitem ver se nossos clientes acessaram o site através de um dos sites de nossos parceiros, para que possamos creditá-los adequadamente e, quando aplicável, permitir que nossos parceiros afiliados ofereçam qualquer promoção que pode fornecê-lo para fazer uma compra.Compromisso do UsuárioO usuário se compromete a fazer uso adequado dos conteúdos e da informação que o Vought oferece no site e com caráter enunciativo, mas não limitativo:A) Não se envolver em atividades que sejam ilegais ou contrárias à boa fé a à ordem pública;B) Não difundir propaganda ou conteúdo de natureza racista, xenofóbica,  betano apostas ou azar, qualquer tipo de pornografia ilegal, de apologia ao terrorismo ou contra os direitos humanos;C) Não causar danos aos sistemas físicos (hardwares) e lógicos (softwares) do Vought, de seus fornecedores ou terceiros, para introduzir ou disseminar vírus informáticos ou quaisquer outros sistemas de hardware ou software que sejam capazes de causar danos anteriormente mencionados.Mais informaçõesEsperemos que esteja esclarecido e, como mencionado anteriormente, se houver algo que você não tem certeza se precisa ou não, geralmente é mais seguro deixar os cookies ativados, caso interaja com um dos recursos que você usa em nosso site.Esta política é efetiva a partir de 9 June 2023 01:12
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login" />
    <string name="comprar_ingresso">COMPRAR INGRESSO</string>
    <string name="local_do_evento">Local do Evento</string>
    <string name="programa_o">Programação:</string>
    <string name="ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="descri_o_do_evento">DESCRIÇÃO DO EVENTO</string>
    <string name="md_submmit_event">MD submmit event</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
