<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.vought.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_location_event"
            app:destination="@id/navigation_location_event" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_new_event"
            app:destination="@id/navigation_new_event" />
        <action
            android:id="@+id/action_navigation_home_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_location_event"
        android:name="com.example.vought.home.LocationEventFragment"
        android:label="@string/location_app"
        tools:layout="@layout/fragment_location_event" />

    <fragment
        android:id="@+id/navigation_new_event"
        android:name="com.example.vought.home.NewEventFragment"
        android:label="@string/add_event"
        tools:layout="@layout/fragment_add_event" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.vought.home.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>