<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_img_logo"
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:contentDescription="@null"
                android:src="@drawable/img_logo_vought" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipt_name_edit"
                style="@style/Theme.Vought.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name"
                    style="@style/Theme.Vought.FormEditText"
                    android:autofillHints="@null"
                    android:drawableLeft="@drawable/ic_name_login"
                    android:drawablePadding="10dp"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipt_register_email"
                style="@style/Theme.Vought.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_email"
                    style="@style/Theme.Vought.FormEditText"
                    android:layout_height="match_parent"
                    android:autofillHints="@null"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipt_register_edit_cpf"
                style="@style/Theme.Vought.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edit_cpf"
                    style="@style/Theme.Vought.FormEditText"
                    android:layout_height="match_parent"
                    android:autofillHints="@null"
                    android:drawableLeft="@drawable/ic_cpf_login"
                    android:drawablePadding="10dp"
                    android:hint="@string/cpf"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipt_password_edit"
                style="@style/Theme.Vought.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    style="@style/Theme.Vought.FormEditText"
                    android:autofillHints="@null"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipt_register_password"
                style="@style/Theme.Vought.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_password"
                    style="@style/Theme.Vought.FormEditText"
                    android:layout_height="match_parent"
                    android:autofillHints="@null"
                    android:drawableLeft="@drawable/ic_confirm_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/password_confirm"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipt_register_cep"
                style="@style/Theme.Vought.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_cep"
                    style="@style/Theme.Vought.FormEditText"
                    android:layout_height="match_parent"
                    android:autofillHints="@null"
                    android:drawableLeft="@drawable/ic_confirm_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/cep"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.example.vought.login.LoadingButton
                android:id="@+id/register_btn_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/next" />

            <FrameLayout
                style="@style/Theme.Vought.FormContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:background="@color/secundary_color_vought" />

                <TextView
                    android:id="@+id/register_txt_login"
                    style="@style/Theme.Vought.TextViewBase"
                    android:layout_width="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:padding="24dp"
                    android:text="@string/already_has_account"
                    android:textAlignment="center"
                    />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
