<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_vought_bottom_login"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_img_logo"
                android:layout_marginBottom="48dp"
                android:layout_width="match_parent"
                android:src="@drawable/img_logo_vought"
                android:layout_height="157dp"
                android:contentDescription="@null" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_edit_email_input"
                style="@style/Theme.Vought.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edit_email"
                    style="@style/Theme.Vought.FormEditText"
                    android:autofillHints="@null"
                    android:hint="@string/email"
                    android:drawableLeft="@drawable/ic_email"
                    android:textColorHint="@color/white"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_edit_password_input"
                style="@style/Theme.Vought.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edit_password"
                    style="@style/Theme.Vought.FormEditText"
                    android:layout_height="match_parent"
                    android:autofillHints="@null"
                    android:hint="@string/password"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.example.vought.login.LoadingButton
                android:id="@+id/login_btn_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/enter" />

            <FrameLayout
                style="@style/Theme.Vought.FormContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:background="@color/secundary_color_vought"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

                <TextView
                    style="@style/Theme.Vought.TextViewBase"
                    android:text="@string/or"
                    android:textColor="@color/secundary_color_vought"
                    android:layout_gravity="center"
                    android:padding="8dp" />
            </FrameLayout>
        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@id/login_txt_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_txt_register"
        style="@style/Theme.Vought.TextViewBase"
        android:text="@string/does_not_have_account"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
