<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_img_logo"
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:layout_marginBottom="48dp"
                android:contentDescription="@null"
                android:src="@drawable/img_logo_vought" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipt_name_edit"
                style="@style/Theme.Vought.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_name"
                    style="@style/Theme.Vought.FormEditText"
                    android:autofillHints="@null"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipt_register_email"
                style="@style/Theme.Vought.FormEditTextInput"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_edit_email"
                    style="@style/Theme.Vought.FormEditText"
                    android:layout_height="match_parent"
                    android:autofillHints="@null"
                    android:drawableLeft="@drawable/ic_confirm_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/password_confirm"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.example.vought.login.LoadingButton
                android:id="@+id/login_btn_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/enter" />

            <FrameLayout
                style="@style/Theme.Vought.FormContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/secundary_color_vought" />

            </FrameLayout>
        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@id/welcome_txt_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome_txt_footer"
        style="@style/Theme.Vought.TextViewBase"
        android:layout_width="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:padding="24dp"
        android:text="@string/already_has_account"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
